fixed start page overflow on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 :root {
   --bg-color: rgb(253, 249, 243);
   --fg-color: rgb(55, 117, 145);
+  overflow: hidden;
 }
 
 body {
